feat:gorm测试回调成功
